add: header iamge, logo, image hauses.

--- a/public/assets/scss/main.css
+++ b/public/assets/scss/main.css
@@ -17352,7 +17352,7 @@ legend span {
 
 .bg-img3 {
   background-attachment: scroll;
-  background-image: url("../images/background/3.jpg");
+  background-image: url("../images/background/d3.jpeg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
