modify mobile menu

--- a/public/assets/scss/menu.css
+++ b/public/assets/scss/menu.css
@@ -740,7 +740,7 @@ header.stylehome1.home4 a {
 
   .stylehome1:before,
   .header.stylehome1 {
-    background-color: #ffffff !important;
+    background-color: #000000 !important;
   }
   .stylehome1.home2,
   .stylehome1.home2:before {
