--- a/public/assets/scss/main.css
+++ b/public/assets/scss/main.css
@@ -19728,3 +19728,23 @@ button.gm-ui-hover-effect:focus {
 .pagination{
   --bs-pagination-padding-x: 0.50rem;
 }
+
+
+/* whastapp */
+.whatsapp {
+  position:fixed;
+  width:70px;
+  height:70px;
+  bottom:40px;
+  right:40px;
+  background-color:#25d366;
+  color:#FFF;
+  border-radius:50px;
+  text-align:center;
+  font-size:40px;
+  z-index:100;
+}
+
+.whatsapp-icon {
+  margin-top:13px;
+}
