--- a/public/assets/scss/main.css
+++ b/public/assets/scss/main.css
@@ -19759,3 +19759,9 @@ margin-top: -20px;
   text-align: center;
   margin-top: -113px;
 }
+
+
+/* button clear */
+.search_option_button {
+  margin-top: 10px;
+}
