buton order list was added

--- a/public/assets/scss/responsive.css
+++ b/public/assets/scss/responsive.css
@@ -1070,7 +1070,7 @@
 	}
 	.tal-smd,
 	.tal-991 {
-		text-align: left !important;
+		text-align: center !important;
 	}
 	.tac-smd {
 		text-align: center !important;
