coment megadropdow on index sccs

--- a/public/assets/scss/index.scss
+++ b/public/assets/scss/index.scss
@@ -3,7 +3,7 @@
 @import "./components/custom-slick";
 @import "./main.css";
 @import "./menu.css";
-@import "./megadropdown.css";
+//@import "./megadropdown.css";
 @import "./ace-responsive-menu.css";
 @import "./components/input-range-slider";
 @import "./components/custom_theme.scss";
