--- a/public/assets/scss/main.css
+++ b/public/assets/scss/main.css
@@ -3157,8 +3157,16 @@ text-align: center;
 
 
 
+/* goal attempt */
+.backGoalAttempt{
+  background-image: url(../images/luxore/backGoalAttempt.jpg) !important;
+  margin-top: 75px;
+  height: 550px;
+  background-position: right 45% top 30%;
+  background-repeat: no-repeat;
+  background-size: cover;
 
-
+}
 
 
 
