--- a/public/assets/scss/main.css
+++ b/public/assets/scss/main.css
@@ -2854,6 +2854,15 @@ a.btn.btn_error {
   height: 450px;
 }
 
+.contact-header-img {
+  background-attachment: scroll;
+  background-image: url("../images/luxore/contactHeader.webp");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 450px;
+}
+
 section {
   padding: 60px 0;
   position: relative;
