--- a/public/assets/scss/main1.css
+++ b/public/assets/scss/main1.css
@@ -17302,6 +17302,15 @@ legend span {
   height: 450px;
 }
 
+.contact-header-img {
+  background-attachment: scroll;
+  background-image: url("../images/luxore/contactHeader.webp");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 450px;
+}
+
 .bg-img4 {
   background-attachment: scroll;
   background-image: url("../images/background/4.jpg");
