--- a/purge/main.css
+++ b/purge/main.css
@@ -2845,6 +2845,14 @@ a.btn.btn_error {
   background-size: cover;
   height: 450px;
 }
+.contact-header-img {
+  background-attachment: scroll;
+  background-image: url("../images/luxore/contactHeader.webp");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 450px;
+}
 
 section {
   padding: 60px 0;
