--- a/public/assets/scss/main1.css
+++ b/public/assets/scss/main1.css
@@ -17305,7 +17305,7 @@ legend span {
 .contact-header-img {
   background-attachment: scroll;
   background-image: url("../images/luxore/contactHeader.webp");
-  background-position: center;
+  background-position: inherit;
   background-repeat: no-repeat;
   background-size: cover;
   height: 450px;
