--- a/purge/main.css
+++ b/purge/main.css
@@ -2848,7 +2848,7 @@ a.btn.btn_error {
 .contact-header-img {
   background-attachment: scroll;
   background-image: url("../images/luxore/contactHeader.webp");
-  background-position: center;
+  background-position: inherit;
   background-repeat: no-repeat;
   background-size: cover;
   height: 450px;
