how work was added

--- a/public/assets/scss/main.css
+++ b/public/assets/scss/main.css
@@ -2860,8 +2860,18 @@ a.btn.btn_error {
   background-position: inherit;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 450px;
+  height: 450px; 
 }
+
+.how-work-header-img{
+  background-attachment: scroll;
+  background-image: url("../images/luxore/how-work-imag-header.webp");
+  background-position: inherit;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 450px; 
+}
+
 
 section {
   padding: 60px 0;
