--- a/public/assets/scss/responsive.css
+++ b/public/assets/scss/responsive.css
@@ -24,6 +24,11 @@
 		background-image: none !important;
 		background: #000000 !important;
 	}
+	.how-work-header-img {
+		border-radius: 0px;
+		background-image: none !important;
+		background: #000000 !important;
+	}
 }
 /*  (min-width:1280px)+++ */
 @media only screen and (max-width: 1280px) {
