--- a/public/assets/scss/responsive1.css
+++ b/public/assets/scss/responsive1.css
@@ -27,6 +27,11 @@
 		background-image: none !important;
 		background: #000000 !important;
 	}
+	.how-work-header-img {
+		border-radius: 0px;
+		background-image: none !important;
+		background: #000000 !important;
+	}
 }
 
 @media only screen and (max-width: 1440px) {
