--- a/public/assets/scss/responsive1.css
+++ b/public/assets/scss/responsive1.css
@@ -32,6 +32,12 @@
 		background-image: none !important;
 		background: #000000 !important;
 	}
+	.how-safe-header-img {
+		border-radius: 0px;
+		background-image: none !important;
+		background: #000000 !important;
+	}
+
 }
 
 @media only screen and (max-width: 1440px) {
