--- a/purge/responsive.css
+++ b/purge/responsive.css
@@ -30,6 +30,11 @@
 		background-image: none !important;
 		background: #000000 !important;
 	}
+	.how-safe-header-img{
+		border-radius: 0px;
+		background-image: none !important;
+		background: #000000 !important;
+	}
 }
 /*  (min-width:1280px)+++ */
 @media only screen and (max-width: 1280px) {
