img header faq was changed

--- a/public/assets/scss/main.css
+++ b/public/assets/scss/main.css
@@ -3152,7 +3152,7 @@ margin-top: -20px;
 }
 
 .backGroudFaq{
-  background-image: url(../images/luxore/backFaq.jpg) !important;
+  background-image: url(../images/luxore/coffe-couple.webp) !important;
   /* margin-top: 75px; */
   background-position: right 45% top 10%;
   background-repeat: no-repeat;
