experts3 img was removed

--- a/public/assets/scss/main.css
+++ b/public/assets/scss/main.css
@@ -3238,7 +3238,7 @@ text-align: center;
 
 .expertsImg3 {
   background-attachment: scroll;
-  background-image: url("../images/luxore/experts3.jpg");
+  background-image: url("../images/luxore/what-are-header-img.webp");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
