--- a/public/assets/scss/main.css
+++ b/public/assets/scss/main.css
@@ -569,7 +569,7 @@ header.header-nav.menu_style_home_one.style2 .ace-responsive-menu li a {
   border-bottom: none;
   margin: 0 auto;
   text-align: center;
-  width: 250px;
+  width: 450px;
 }
 
 .home_adv_srch_opt.home3 {
@@ -596,7 +596,7 @@ header.header-nav.menu_style_home_one.style2 .ace-responsive-menu li a {
   color: #1b2032;
   font-size: 16px;
   height: 50px;
-  width: 110px;
+  /* width: 110px;  width is commeted*/
   text-align: center;
   line-height: 35px;
 }
