gift style was changed

--- a/public/assets/scss/main.css
+++ b/public/assets/scss/main.css
@@ -3208,9 +3208,9 @@ text-align: center;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 450px;
+  height: 85%;
   margin-top: 40px;
-  width: 300px;
+  width: 400px;
 }
 
 
