--- a/components/common/map/styles.css
+++ b/components/common/map/styles.css
@@ -14,13 +14,16 @@
     font-family: sans-serif;
     color: #333;
     background-color: #f3e4d7;
+
   }
   
   /* height of the container */
   .leaflet-container {
-    height: 90vh;
+    height: 70vh;
     width: 90%;
     border-radius: 2rem;
+    position: sticky !important;
+    margin: 10px;
   }
   
   .cluster-icon {
@@ -36,3 +39,4 @@
     box-shadow: 0 0 0px 5px #fff;
   }
   
+
