--- a/public/assets/scss/main.css
+++ b/public/assets/scss/main.css
@@ -534,7 +534,7 @@ header.header-nav.menu_style_home_one.style2 .ace-responsive-menu li a {
   border-bottom: none;
   margin: 0 auto;
   text-align: center;
-  width: 450px;
+  width: 100%;
 }
 
 .home_adv_srch_opt.home3 {
