--- a/public/assets/scss/components/_custom-slick.scss
+++ b/public/assets/scss/components/_custom-slick.scss
@@ -76,23 +76,16 @@
 
 //
 .slide {
-    height: 805px;
-    &.image-1 {
-        background-image: url(../../images//home/1.jpg);
-    }
-    &.image-2 {
-        background-image: url(../../images/home/2.jpg);
-    }
-    &.image-3 {
-        background-image: url(../../images/home/2.jpg);
-    }
-    &.image-4 {
-        background-image: url(../../images/home/4.jpg);
-    }
-    &.image-5 {
-        background-image: url(../../images/home/8.jpg);
+    height: 700px;
+}
+@media (max-width: 767px) {
+    .slide{
+        height: 400px !important;
     }
 }
+
+
+
 .listing-single-4 {
     .slick-slide {
         height: 600px;
@@ -100,7 +93,7 @@
     @media (max-width: 767px) {
         .slide,
         .slick-slide {
-            height: 400px;
+            height: 400px !important;
         }
     }
 }
