--- a/public/assets/scss/index.scss
+++ b/public/assets/scss/index.scss
@@ -1,6 +1,6 @@
-@import "slick-carousel/slick/slick.css";
-@import "slick-carousel/slick/slick-theme.css";
-@import "./components/custom-slick";
+// @import "slick-carousel/slick/slick.css";
+// @import "slick-carousel/slick/slick-theme.css";
+ @import "./components/custom-slick";
 @import "./main.css";
 @import "./menu.css";
 //@import "./megadropdown.css";
@@ -8,7 +8,7 @@
 @import "./components/input-range-slider";
 @import "./components/custom_theme.scss";
 @import "./responsive.css";
-@import "node_modules/react-modal-video/scss/modal-video.scss";
+// @import "node_modules/react-modal-video/scss/modal-video.scss";
 
 .parent-menu-active > .pro-inner-item > .pro-item-content {
     color: var(--color-primary) !important;
