remove font-awesome-animation.min.css

--- a/public/assets/scss/main.css
+++ b/public/assets/scss/main.css
@@ -11,7 +11,7 @@ Tag: advanced custom search, agency, agent, business, clean, corporate, director
 /* CSS Document */
 @import "~bootstrap/scss/bootstrap";
 @import url(../scss/font-awesome.min.css);
-@import url(../scss/font-awesome-animation.min.css);
+/* @import url(../scss/font-awesome-animation.min.css); */
 @import url(../scss/flaticon.css);
 
 /* Table of contents */
