d3 image was changed

--- a/public/assets/scss/main.css
+++ b/public/assets/scss/main.css
@@ -2208,7 +2208,7 @@ a.btn.btn_error {
 
 .bg-img3 {
   background-attachment: scroll;
-  background-image: url("../images/background/d3.jpeg");
+  background-image: url("../images/background/d3.webp");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
