--- a/public/assets/scss/main1.css
+++ b/public/assets/scss/main1.css
@@ -17345,7 +17345,7 @@ legend span {
 
 .bg-img3 {
   background-attachment: scroll;
-  background-image: url("../images/background/d3.jpeg");
+  background-image: url("../images/background/d3.webp");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
